# taiko-mono

./: .all-contributorsrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .prettierignore  .release-please-manifest.json  Agents.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  CROSS_CHAIN_DEX_POC.md  Cargo.toml  Doc:typo  Dockerfile  ELIGIBLE ETHEREUM.JSON  FIELD_COVERAGE_ANALYSIS.md  INBOX_AUDIT.md  Jaan  L1_TEST_STATUS.md  LICENSE  LICENSE.md  MULTI_SOURCE_DERIVATION_SUMMARY.md  PR_21270_review.md  README.md  REAL_TIME_INBOX_MIGRATION.md  RELEASE.md  Typoindoc.txt  _typos.toml  autoresearch-results.tsv  avoid-memory-copy.md  cliff.toml  codecov.yml  conductor.json  decoded_propose_calldata_verified.json  docker-compose-relayer.yaml  docker-compose.yml  (+28 more)
.claude/: settings.json  settings.local.json
.claude/agents/: solidity-architect.md  solidity-auditor.md  solidity-developer.md  solidity-optimizer.md  solidity-optimizoor.md  solidity-tester.md
.claude/commands/: improve-pr-desc.md  review-layout.md
.github/: CODEOWNERS  _typos.toml  dependabot.yml  docker.yml  nice
.github/ISSUE_TEMPLATE/: Testnet-Feedback  add-token-address.yml  add_project.yml  bug_report.yml  config.yml  feature_request.yml
.github/actions/: set-up-protocol.yml
.github/actions/ensure-make/: action.yml
.github/actions/install-pnpm-dependencies/: action.yml
.github/actions/set-up-protocol/: action.yml
.github/scripts/: weekly-docs-audit.ts
.github/scripts/docs-audit/: package-lock.json  package.json  weekly-docs-audit.ts
.github/workflows/: Website.yml  arc-runner-mold-smoke.yml  auto-approve-pr.yml  avs-stack-deploy.yml  avs-stack-pytest.yml  blob-indexer--docker-build.yml  blobindexer-rs--ci.yml  blobindexer-rs--docker.yml  blobstorage--production.yml  blobstorage-preview.yml  blobstorage-production.yml  blobstorage.yml  bridge-ui--ci.yml  bridge-ui--deploy.yml  bridge-ui--docker-build.yml  bridge-ui--preview.yml  bridge-ui-checks.yml  bridge-ui-ci-cd.yml  bridge-ui-ci.yml  bridge-ui-deploy.yml  bridge-ui-preview-internal.yml  bridge-ui-preview.yml  bridge-ui-production.yml  bridge-ui-v2.yml  bridge-ui.yml  claude-code-review.yml  claude-code.yml  claude-layout-review.yml  claude-layout-review.yml.bkup  claude.yml  cleanup-releases.yml  close-inactive-issues.yml  close-old-dependency-prs.yml  codeql.yml  custom-runner--docker.yml  defenders.yml  do-not-merge-pr.yml  docker.yml  docs-site--preview.yml  docs-site--production.yml  (+118 more)
.github/workflows/common/: lint-pr-title.yml  lint-pr.yml
.github/workflows/releases/: bridge-ui-preview.yml  bridge-ui-production.yml
.husky/: pre-commit
.vercel/: project.json
docs/plans/: 2025-12-30-inbox-micro-refactor-design.md  2025-12-30-inbox-reactivation-design.md  2025-12-30-minforced-inclusion-guard.md  2025-12-31-proverauction2.md  2026-01-01-multi-prover-auction.md  2026-06-24-hoodi-sgx-own-pccs.md
docs/superpowers/specs/: 2026-04-09-ejector-http-only-design.md  2026-04-14-devnet-uzen-env-design.md  (+6 more)
impl/: InboxCodex.sol
preconf_blocks_api/: docs.go  swagger.json  swagger.yaml
scripts/: README.md  remove-local-ignores.sh  setup-local-ignores.sh
(+2 files in other folders)
