[workspace]
members = [
  "packages/ejector",
  "packages/ejector/crates/config",
  "packages/ejector/crates/monitor",
  "packages/ejector/crates/bindings",
  "packages/ejector/crates/beacon",
  "packages/ejector/crates/utils",
  "packages/ejector/crates/server",
  "packages/ejector/crates/metrics"
]
resolver = "2"

# Inherit these into each crate with `*.workspace = true`
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# One place to pin third‑party versions
[workspace.dependencies]
bindings = { path = "packages/ejector/crates/bindings" }
beacon = { path = "packages/ejector/crates/beacon" }
utils = { path = "packages/ejector/crates/utils" }
server = { path = "packages/ejector/crates/server" }
metrics = { path = "packages/ejector/crates/metrics" }
alloy = { version = "1.0.13", features = ["full"] }
prometheus = "0.13"
once_cell = "1.19"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
eyre = "0.6"
color-eyre = "0.6"
tokio = { version = "1.45", default-features = false, features = ["full"] }
tokio-util = { version = "0.7" }
url = { version = "2.5.0", features = ["serde"] }
futures-util = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-serde = "0.11.0"


[workspace.lints.clippy]
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"